add modal on show game results fixed user exit game scenario

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Database": "Server=localhost,1401;Database=TestDB;User Id=SA;Password=kind6iVy;Trusted_Connection=False;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
