add statistics for games modified header

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Database": "Server=localhost,1401;Database=TestDB;User Id=SA;Password=kind6iVy;Trusted_Connection=False;"
+    "Database": "Server=localhost,1401;Database=master;User Id=SA;Password=kind6iVy;Trusted_Connection=False;MultipleActiveResultSets=true  "
   },
   "Logging": {
     "IncludeScopes": false,
